--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,7 +8,7 @@
 #         |___/   
 #                           By:The Awesome LaxWasHere 
 #
-# Available Variables {ONLINE} {MinecraftVersion}
+# Available Variables {ONLINE} {MinecraftVersion} {PLAYER}
 # See plugin page for more info.
 #
 MOTDs:
